--- a/README
+++ b/README
@@ -5,39 +5,41 @@ UDP шлюз для DHT22
 1.1 Требования
 Функции управления пинами реализованы для процессора Allwinner A20 и H3. Скрипт-установщик
 работает в командной оболочке bash.
-1.2 Настройки:
-- доступ к базе данных настроек: файл main.conf первая строка;
-- класс приложения:  файл main.conf вторая строка (используется для извлечения 
-  данных из базы данных и позволяет использовать одну и ту же базу данных для 
-  нескольких приложений);
+1.2 Настройка перед установкой:
 - место установки исполняемого файла: файл build.sh константа INST_DIR
 - место установки файла конфигурации: файл build.sh константа CONF_DIR (должна соответствовать CONF_DIR из main.h)
 - процессор: файл build.sh константа PLATFORM
-- путь к заголовочным файлам postgres: файл build.sh константа PSQL_I_DIR
-- путь к библиотеке libpq: файл build.sh константа PSQL_L_DIR
-- откуда загружать данные (см. п. 2): файл build.sh константа INI_MODE
+- число попыток чтения с датчика при неудаче: файл main.h константа RETRY_NUM
 1.3 Команды для установки:
 cd gwu22
 Полная установка:
 sudo ./build.sh full
+Полная установка, не затрагивая конфигурационных файлов:
+sudo ./build.sh full_nc
 Для тестирования (файлы не копируются за пределы текущей папки):
 sudo ./build.sh part_debug
 
-2 Настройка базы данных
-Если во время построения приложения определена константа FILE_INI, то данные будут извлекаться из файлов 
-DEVICE_FILE и CONFIG_FILE из main.h.
+2 Настройка после установки:
+Общие настройки демона читаются из файла CONFIG_FILE (main.h).
 Формат CONFIG_FILE:
- port\tpid_path\tudp_buf_size
+ Port\tPidPath\tSocketBufferSize
+ где
+ Port - порт (должен быть уникальным в рамках хоста)
+ PidPath - путь к файлу блокировки
+ SocketBufferSize - максимальный размер пакета, передаваемого по сети
 Формат DEVICE_FILE:
- pin\temperature_sensor_id\thumidity_sensor_id
-Если во время построения приложения константа FILE_INI не определена, то используется
-СУБД PostgreSQL.
-В файле ./sql/main.sql находится структура данных, используемая этим приложением.
-Файл ./sql/data_diagram.png позволит лучше понять взаимосвязи между данными.
-
+ Pin\TemperatureSensorId\tHumiditySensorId
+ где
+ Pin - физический номер порта к которому подключен датчик DHT22
+ TemperatureSensorId - уникальный номер датчика температуры (выбирается произвольно, 
+ в дальнейшем, по нему можно будет получить значение температуры с датчика на данном порте).
+ HumiditySensorId - уникальный номер датчика влажности (выбирается произвольно, 
+ в дальнейшем, по нему можно будет получить значение влажности с датчика на данном порте).
 3 Запуск
 При полной установке запускается автоматически, вмести с операционной системой.
 sudo gwu22
+В режиме отладки (не отключается от терминала и выдает сообщения):
+sudo gwu22_dbg
 Если приложение установлено для тестирования:
 sudo ./gwu22_dbg
 
