--- a/README
+++ b/README
@@ -24,15 +24,15 @@ sudo ./build.sh part_debug
 Формат CONFIG_FILE:
  Port\tPidPath\tSocketBufferSize
  где
- Port - порт (должен быть уникальным в рамках хоста)
- PidPath - путь к файлу блокировки
- SocketBufferSize - максимальный размер пакета, передаваемого по сети
+ Port - порт (должен быть уникальным в рамках хоста);
+ PidPath - путь к файлу блокировки;
+ SocketBufferSize - максимальный размер пакета, передаваемого по сети.
 Формат DEVICE_FILE:
  Pin\TemperatureSensorId\tHumiditySensorId
  где
- Pin - физический номер порта к которому подключен датчик DHT22
+ Pin - физический номер порта к которому подключен датчик DHT22;
  TemperatureSensorId - уникальный номер датчика температуры (выбирается произвольно, 
- в дальнейшем, по нему можно будет получить значение температуры с датчика на данном порте).
+ в дальнейшем, по нему можно будет получить значение температуры с датчика на данном порте);
  HumiditySensorId - уникальный номер датчика влажности (выбирается произвольно, 
  в дальнейшем, по нему можно будет получить значение влажности с датчика на данном порте).
 3 Запуск
