--- a/README
+++ b/README
@@ -8,7 +8,7 @@ UDP шлюз для DHT22
 1.2 Настройка перед установкой:
 - место установки исполняемого файла: файл build.sh константа INST_DIR
 - место установки файла конфигурации: файл build.sh константа CONF_DIR (должна соответствовать CONF_DIR из main.h)
-- процессор: файл build.sh константа PLATFORM
+- см. ./lib/gpio/README
 - число попыток чтения с датчика при неудаче: файл main.h константа RETRY_NUM
 1.3 Команды для установки:
 cd gwu22
