--- a/README
+++ b/README
@@ -20,21 +20,22 @@ sudo ./build.sh full_nc
 sudo ./build.sh part_debug
 
 2 Настройка после установки:
-Общие настройки демона читаются из файла CONFIG_FILE (main.h).
-Формат CONFIG_FILE:
- Port\tPidPath\tSocketBufferSize
+Общие настройки демон читает из файла CONFIG_FILE (main.h),
  где
- Port - порт (должен быть уникальным в рамках хоста);
- PidPath - путь к файлу блокировки;
- SocketBufferSize - максимальный размер пакета, передаваемого по сети.
-Формат DEVICE_FILE:
- Pin\TemperatureSensorId\tHumiditySensorId
+ port - порт (должен быть уникальным в рамках хоста);
+ PID_path - путь к файлу блокировки;
+ retry_count - число попыток чтения с датчика при неудаче.
+Настройки для датчиков демон читает из файла DEVICE_FILE (main.h):
  где
- Pin - физический номер порта к которому подключен датчик DHT22;
- TemperatureSensorId - уникальный номер датчика температуры (выбирается произвольно, 
+ pin - физический номер порта к которому подключен датчик DHT22;
+ temp_id - уникальный номер датчика температуры (выбирается произвольно, 
  в дальнейшем, по нему можно будет получить значение температуры с датчика на данном порте);
- HumiditySensorId - уникальный номер датчика влажности (выбирается произвольно, 
+ hum_id - уникальный номер датчика влажности (выбирается произвольно, 
  в дальнейшем, по нему можно будет получить значение влажности с датчика на данном порте).
+Настройки для коррекции измерений демон читает из файла LCORRECTION_FILE (main.h):
+ device_id - идентификатор датчика (из файла DEVICE_FILE);
+ factor - коэффициент;
+ delta - приращение.
 3 Запуск
 При полной установке запускается автоматически, вмести с операционной системой.
 sudo gwu22
