config from tsvlib, lcorrection from lib

--- a/README
+++ b/README
@@ -1,10 +1,11 @@
 
 UDP шлюз для DHT22
+По запросу клиента читает температуру с датчика и передает этому клиенту результат.
+Количество подключаемых датчиков не ограничивается программой.
 
 1 Установка
 1.1 Требования
-Функции управления пинами реализованы для процессора Allwinner A20 и H3. Скрипт-установщик
-работает в командной оболочке bash.
+Скрипт-установщик работает в командной оболочке bash.
 1.2 Настройка перед установкой:
 - место установки исполняемого файла: файл build.sh константа INST_DIR
 - место установки файла конфигурации: файл build.sh константа CONF_DIR (должна соответствовать CONF_DIR из main.h)
@@ -19,21 +20,25 @@ sudo ./build.sh full_nc
 sudo ./build.sh part_debug
 
 2 Настройка после установки:
-Общие настройки демон читает из файла CONFIG_FILE (main.h),
+Общие настройки демон читает из файла CONF_MAIN_FILE (main.h),
  где
  port - порт (должен быть уникальным в рамках хоста);
  retry_count - число попыток чтения с датчика при неудаче.
-Настройки для датчиков демон читает из файла DEVICE_FILE (main.h):
+Настройки для датчиков демон читает из файла CONF_DEVICE_FILE (main.h):
  где
  pin - физический номер порта к которому подключен датчик DHT22;
  temp_id - уникальный номер датчика температуры (выбирается произвольно, 
  в дальнейшем, по нему можно будет получить значение температуры с датчика на данном порте);
  hum_id - уникальный номер датчика влажности (выбирается произвольно, 
- в дальнейшем, по нему можно будет получить значение влажности с датчика на данном порте).
-Настройки для коррекции измерений демон читает из файла LCORRECTION_FILE (main.h):
- device_id - идентификатор датчика (из файла DEVICE_FILE);
+ в дальнейшем, по нему можно будет получить значение влажности с датчика на данном порте);
+Настройки для коррекции измерений демон читает из файла CONF_LCORRECTION_FILE (main.h):
+ id - идентификатор набора параметров (целое число; задается произвольно; нельзя повторять);
  factor - коэффициент;
  delta - приращение.
+Настройка привязки коррекции измерений к каналам находится в файле CONF_MOD_MAPPING_FILE (main.h):
+ net_id - ссылка на temp_id или hum_id из CONF_DEVICE_FILE;
+ lcorrection_id - идентификатор набора параметров из файла настройки коррекции измерений (CONF_LCORRECTION_FILE).
+если net_id повторяется, то будет использована последняя строка с повторяющимся net_id.
 3 Запуск
 При полной установке запускается автоматически, вмести с операционной системой.
 sudo gwu22
