--- a/README
+++ b/README
@@ -62,7 +62,7 @@ https://github.com/arinichevN/app_cl
 Утилита netcat не подходит, так как разрывает пакеты, встречая символ '\n'
 Параметры утилиты udpcl следует заменить на свои.
 перезагрузка с чтением всех настроек:
-udpcl ars '' 192.168.1.250 49161 2
-запрос температуры для датчика №1 и №2:
-udpcl gfts 1\n2\n 192.168.1.250 49161 2
+udpcl ars '' 192.168.1.250 49162 2
+запрос на чтение для каналов №1 и №2:
+udpcl gfts '1\n2\n' 192.168.1.250 49162 2
 
