new gpio control functions

--- a/README
+++ b/README
@@ -5,7 +5,7 @@ UDP шлюз для DHT22
 
 1 Установка
 1.1 Требования
-Скрипт-установщик работает в командной оболочке bash.
+Скрипт-установщик(build.sh) работает  в командной оболочке bash.
 1.2 Настройка перед установкой:
 - место установки исполняемого файла: файл build.sh константа INST_DIR
 - место установки файла конфигурации: файл build.sh константа CONF_DIR (должна соответствовать CONF_DIR из main.h)
