--- a/README
+++ b/README
@@ -26,7 +26,7 @@ sudo ./build.sh part_debug
  retry_count - число попыток чтения с датчика при неудаче.
 Настройки для датчиков демон читает из файла CONF_DEVICE_FILE (main.h):
  где
- pin - физический номер порта к которому подключен датчик DHT22;
+ pin - физический номер порта к которому подключен датчик;
  temp_id - уникальный номер датчика температуры (выбирается произвольно, 
  в дальнейшем, по нему можно будет получить значение температуры с датчика на данном порте);
  hum_id - уникальный номер датчика влажности (выбирается произвольно, 
